Add MCP server configurations and enhance documentation
- Introduced a new configuration file `mcp.example.json` for defining various MCP server setups, including Python, TypeScript, and Rust servers with their respective commands and environment variables.
- Updated the `README.md` to reflect the current development status and architecture principles, emphasizing the production readiness of the Python, Rust, and TypeScript servers.
- Added detailed documentation for Brave Search improvements, semantic caching implementation, and server consolidation, enhancing clarity on the project's structure and features.
- Removed outdated files related to the Python MCP server's implementation and quick start guide, streamlining the documentation for better user experience.

--- a/ToolRack/TypeScript/.env.example
+++ b/ToolRack/TypeScript/.env.example
@@ -1,1 +1,7 @@
 BRAVE_API_KEY=YOUR_BRAVE_API_KEY_HERE
+
+ENABLE_SEMANTIC_CACHE=true
+ENABLE_DEDUPLICATION=true
+CACHE_TTL_SECONDS=3600
+MAX_RESULTS_PER_DOMAIN=2
+
