--- a/ToolRack/TypeScript/package.json
+++ b/ToolRack/TypeScript/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
+    "mcp": "node dist/server/server.js",
     "dev": "tsc -w & nodemon dist/index.js"
   },
   "keywords": [
